--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,7 @@ tr:nth-child(even) {
 
 footer {
     background-color: #e9531e;
+    width: 100%;
     height: 70px;
     color: #fff;
     display: flex;
