--- a/styles/style.css
+++ b/styles/style.css
@@ -118,7 +118,7 @@ tr:nth-child(even) {
     background-color: #ffe7d9;
 }
 
-footer {
+/* footer {
     background-color: #e9531e;
     width: 100%;
     height: 70px;
@@ -127,6 +127,6 @@ footer {
     justify-content: center;
     align-items: center;
     font-size: 20px;
-}
+} */
 
 
